--- a/LibraryA/CMakeLists.txt
+++ b/LibraryA/CMakeLists.txt
@@ -1,18 +1,18 @@
 cmake_minimum_required(VERSION 3.15)
-project(Library CXX)
+project(LibraryA CXX)
 
-add_library(Library Library.cpp Library.h)
+add_library(LibraryA LibraryA.cpp LibraryA.h)
 
-set_target_properties(Library PROPERTIES PUBLIC_HEADER "Library.h")
-install(TARGETS Library DESTINATION "."
+set_target_properties(LibraryA PROPERTIES PUBLIC_HEADER "LibraryA.h")
+install(TARGETS LibraryA DESTINATION "."
         PUBLIC_HEADER DESTINATION include
         RUNTIME DESTINATION bin
         ARCHIVE DESTINATION lib
         LIBRARY DESTINATION lib
         )
-set_target_properties(Library PROPERTIES CXX_STANDARD 11)
+set_target_properties(LibraryA PROPERTIES CXX_STANDARD 11)
 
-set(CPACK_PACKAGE_NAME Library-${CMAKE_BUILD_TYPE})
+set(CPACK_PACKAGE_NAME LibraryA-${CMAKE_BUILD_TYPE})
 include(CPack)
 
 
@@ -23,7 +23,7 @@ include(CMakePackageConfigHelpers)
 
 
 
-file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/LibraryConfig.cmake.in
+file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/LibraryAConfig.cmake.in
 "set(FOO_VERSION 0.1)
 @PACKAGE_INIT@
 set_and_check(FOO_INCLUDE_DIR \"@PACKAGE_INCLUDE_INSTALL_DIR@\")
@@ -32,17 +32,17 @@ check_required_components(Foo)
 )"
 )
 
-configure_package_config_file(${CMAKE_CURRENT_BINARY_DIR}/LibraryConfig.cmake.in
-	${CMAKE_CURRENT_BINARY_DIR}/LibraryConfig.cmake
-	INSTALL_DESTINATION ${LIB_INSTALL_DIR}/Library/cmake)
+configure_package_config_file(${CMAKE_CURRENT_BINARY_DIR}/LibraryAConfig.cmake.in
+	${CMAKE_CURRENT_BINARY_DIR}/LibraryAConfig.cmake
+	INSTALL_DESTINATION ${LIB_INSTALL_DIR}/LibraryA/cmake)
 	#  PATH_VARS INCLUDE_INSTALL_DIR SYSCONFIG_INSTALL_DIR)
 write_basic_package_version_file(
-	${CMAKE_CURRENT_BINARY_DIR}/LibraryConfigVersion.cmake
+	${CMAKE_CURRENT_BINARY_DIR}/LibraryAConfigVersion.cmake
   VERSION 1.2.3
   COMPATIBILITY SameMajorVersion )
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/LibraryConfig.cmake
-              ${CMAKE_CURRENT_BINARY_DIR}/LibraryConfigVersion.cmake
-	      DESTINATION ${LIB_INSTALL_DIR}/Library/cmake )
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/LibraryAConfig.cmake
+              ${CMAKE_CURRENT_BINARY_DIR}/LibraryAConfigVersion.cmake
+	      DESTINATION ${LIB_INSTALL_DIR}/LibraryA/cmake )
 
 if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
   message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
