--- a/LibraryA/test_package/CMakeLists.txt
+++ b/LibraryA/test_package/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 project(PackageTest CXX)
 
-find_package(Library CONFIG REQUIRED)
+find_package(LibraryA CONFIG REQUIRED)
 
 add_executable(example src/example.cpp)
-target_link_libraries(example Library::Library)
+target_link_libraries(example LibraryA::LibraryA)
