renamed artifacts again
to  use repository and ref_name

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,12 +36,12 @@ jobs:
     - name: Create multiplatform artifact for github
       uses: actions/upload-artifact@v3
       with:
-        name: multiplatform-artifact
+        name: ${{ github.repository }}-${{ github.ref_name }}-multiplatform-${{ github.sha }}
         path: ${{github.workspace}}/build/LibraryA-*
     - name: Create per-platform artifacts for github
       uses: actions/upload-artifact@v3
       with:
-        name: ${{ matrix.os }}-artifact
+        name: ${{ github.repository }}-${{ github.ref_name }}-${{ matrix.os }}-${{ github.sha }}
         path: ${{github.workspace}}/build/LibraryA-*
         
         
