renamed wrong tag on regex-property-action
Issue reported on https://github.com/ashley-taylor/regex-property-action/issues/3

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,7 +35,7 @@ jobs:
       
     - name: Strip repository name
       id: strip_repo_name
-      uses: ashley-taylor/regex-property-action@v1.2
+      uses: ashley-taylor/regex-property-action@1.2
       with:
         value: ${{ github.repository }}
         regex: ".*/"
