--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,7 +50,12 @@ jobs:
       with:
         name: ${{ steps.strip_repo_name.outputs.value }}-${{ github.ref_name }}-${{ matrix.os }}-${{ github.sha }}
         path: ${{github.workspace}}/build/LibraryA-*
-        
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: ${{github.workspace}}/build/LibraryA-*
         
     - uses: jfrog/setup-jfrog-cli@v2
       env:
