--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,7 @@ jobs:
       run: |
         import platform
         print(platform.uname())
+        print(${{ github.ref }})
       shell: python
         
     - name: Configure CMake
