--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,9 +7,9 @@ on:
       - '*'
   pull_request:
     branches: [ main ]
-  create:
-    tags:
-      - '*'
+#  create:
+#    tags:
+#      - '*'
     
 jobs:
   build:
@@ -67,6 +67,7 @@ jobs:
       env:
         JF_ENV_1: ${{ secrets.JF_SECRET_ENV_1 }}
     - name: Artifactory generic
+      if: ! startsWith(github.ref, 'refs/tags/')
       working-directory: ${{github.workspace}}/build
       run: |
         jf rt ping
