--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,7 +67,7 @@ jobs:
       env:
         JF_ENV_1: ${{ secrets.JF_SECRET_ENV_1 }}
     - name: Artifactory generic
-      if: ! startsWith(github.ref, 'refs/tags/')
+      if: "!startsWith(github.ref, 'refs/tags/')"
       working-directory: ${{github.workspace}}/build
       run: |
         jf rt ping
