--- a/LibraryA/test_package/CMakeLists.txt
+++ b/LibraryA/test_package/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
 project(PackageTest CXX)
 
-find_package(LibraryA CONFIG REQUIRED)
+#find_package(LibraryA CONFIG REQUIRED)
 
+enable_testing()
 add_executable(example src/example.cpp)
-target_link_libraries(example LibraryA::LibraryA)
+add_test(NAME example COMMAND example)
+target_link_libraries(example LibraryA)
+#target_link_libraries(example LibraryA::LibraryA)
