--- a/LibraryA/test_package/CMakeLists.txt
+++ b/LibraryA/test_package/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
+set(CMAKE_OSX_ARCHITECTURES arm64;x86_64 CACHE STRING "osx architectures") 
 project(PackageTest CXX)
 
 #find_package(LibraryA CONFIG REQUIRED)
