ctest verbose to show executable output

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,4 +91,4 @@ jobs:
 
     - name: Test
       working-directory: ${{github.workspace}}/build/test_package
-      run: ctest -C ${{ matrix.build_type }}
+      run: ctest -VV -C ${{ matrix.build_type }}
